--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">App3</string>
-    <string name="initial_url">https://media.makeameme.org/created/its-working-oyy433.jpg</string>
+    <string name="initial_url" translatable="false">https://media.makeameme.org/created/its-working-oyy433.jpg</string>
     <string name="address_label">Address:</string>
     <string name="download_info_label">Download info</string>
     <string name="file_size_label">File size:</string>
     <string name="file_type_label">File type:</string>
-    <string name="_0">0</string>
+    <string name="_0" translatable="false">0</string>
     <string name="download_file_label">Download file</string>
     <string name="bytes_downloaded_label">Bytes downloaded:</string>
 </resources>
