--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">App3</string>
-    <string name="initial_url" translatable="false">https://images4.alphacoders.com/103/1038322.jpg</string>
+    <string name="initial_url" translatable="false">https://media.makeameme.org/created/its-working-oyy433.jpg</string>
     <string name="address_label">Address:</string>
     <string name="download_info_label">Download info</string>
     <string name="file_size_label">File size:</string>
